@@ -37,8 +37,12 @@ function dismissLog() {
 const d = new Date();
 let hours = d.getHours();
 
-if (hours < 12) {
-    document.getElementById("header").innerHTML = "Good Morning and Welcome Back!"
+if (hours < 5) {
+    document.getElementById("header").innerHTML = "Good Morning, early bird and Welcome Back!"
+} else if (hours < 12) {
+    document.getElementById("header").innerHTML = "Good Morning, and Welcome Back!"
+} else if (hours < 23) {
+    document.getElementById("header").innerHTML = "Good Afternoon, and Welcome Back!"
 } else {
-    document.getElementById("header").innerHTML = "Good Afternoon and Welcome Back!"
+    document.getElementById("header").innerHTML = "Good Night, and Welcome Back!"
 }
